--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script src = "./script_1_2.js"></script>
+    <script src = "./module_2/script_2_1.js"></script>
 </body>
 </html> 
