--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Keep going</title>
 </head>
 <body>
-    <script src = "./module_2/script_2_2.js"></script>
+    <script src = "./freeCodeCamp/pyramidGenerator.js"></script>
 </body>
 </html> 
