--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Keep going</title>
 </head>
 <body>
-    <script src = "./freeCodeCamp/pyramidGenerator.js"></script>
+    <script src = "./module_3/script_3_1.js"></script
 </body>
 </html> 
