--- a/module_6/index.html
+++ b/module_6/index.html
@@ -3,9 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Keep going</title>
+    <title>Module 6</title>
+    <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
-    <script src="./module_6/script_6_1.js" defer></script>
+    <h1 class="js_title" data-id="title">Hello World</h1>
+    <script src="./script_6_1.js"></script>
   </body>
 </html>
