--- a/module_6/index.html
+++ b/module_6/index.html
@@ -7,12 +7,13 @@
     <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
-    <h1 class="js_title" data-id="title">Hello World</h1>
+    <!-- <h1 class="js_title" data-id="title">Hello World</h1>
     <ul class="js-list">
       <li>1</li>
       <li>2</li>
       <li>3</li>
-    </ul>
+    </ul> -->
+    <ul class="js-container"></ul>
     <script src="./script_6_1.js"></script>
   </body>
 </html>
