--- a/module_6/index.html
+++ b/module_6/index.html
@@ -13,7 +13,9 @@
       <li>2</li>
       <li>3</li>
     </ul> -->
-    <ul class="js-container"></ul>
-    <script src="./script_6_1.js"></script>
+    <!-- <ul class="js-container"></ul> -->
+    <button class="js-button">Click</button>
+    <div class="js-container container"></div>
+    <script src="./script_6_2.js"></script>
   </body>
 </html>
