--- a/module_6/index.html
+++ b/module_6/index.html
@@ -16,6 +16,6 @@
     <!-- <ul class="js-container"></ul> -->
     <button class="js-button">Click</button>
     <div class="js-container container"></div>
-    <script src="./script_6_2.js"></script>
+    <script src="./script_6_2.js" type="module"></script>
   </body>
 </html>
