--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Keep going</title>
   </head>
   <body>
-    <script src="./module_6/script_6_1.js" defer></script>
+    <script src="./module_6/script_6_1.js" type="module"></script>
   </body>
 </html>
