--- a/module_6/index.html
+++ b/module_6/index.html
@@ -14,8 +14,27 @@
       <li>3</li>
     </ul> -->
     <!-- <ul class="js-container"></ul> -->
-    <button class="js-button">Click</button>
-    <div class="js-container container"></div>
+    <!-- <button class="js-button">Click</button>
+    <div class="js-container container"></div> -->
+    <ul>
+      <li>
+        <h2 class="js-title">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Non
+          necessitatibus odit mollitia debitis tenetur, ratione, voluptatem
+          facilis fugiat vero dicta illo assumenda et
+        </h2>
+      </li>
+      <li>
+        <h2 class="js-title1">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Non
+          necessitatibus odit mollitia debitis tenetur, ratione, voluptatem
+          facilis fugiat vero
+        </h2>
+      </li>
+      <li>
+        <h2 class="js-title2">Lorem</h2>
+      </li>
+    </ul>
     <script src="./script_6_2.js" type="module"></script>
   </body>
 </html>
