--- a/module_6/index.html
+++ b/module_6/index.html
@@ -16,7 +16,7 @@
     <!-- <ul class="js-container"></ul> -->
     <!-- <button class="js-button">Click</button>
     <div class="js-container container"></div> -->
-    <ul>
+    <!-- <ul>
       <li>
         <h2 class="js-title">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Non
@@ -34,7 +34,13 @@
       <li>
         <h2 class="js-title2">Lorem</h2>
       </li>
-    </ul>
+    </ul> -->
+    <form action="submit" class="js-form">
+      <input type="text" />
+      <input type="email" />
+      <input type="number" />
+      <button>Submit</button>
+    </form>
     <script src="./script_6_2.js" type="module"></script>
   </body>
 </html>
