--- a/module_6/index.html
+++ b/module_6/index.html
@@ -36,9 +36,9 @@
       </li>
     </ul> -->
     <form action="submit" class="js-form">
-      <input type="text" />
-      <input type="email" />
-      <input type="number" />
+      <input type="text" name="userName" />
+      <input type="email" name="userEmail" />
+      <input type="number" name="userAge" />
       <button>Submit</button>
     </form>
     <script src="./script_6_2.js" type="module"></script>
