--- a/module_6/index.html
+++ b/module_6/index.html
@@ -35,12 +35,12 @@
         <h2 class="js-title2">Lorem</h2>
       </li>
     </ul> -->
-    <form action="submit" class="js-form">
+    <!-- <form action="submit" class="js-form">
       <input type="text" name="userName" />
       <input type="email" name="userEmail" />
       <input type="number" name="userAge" />
       <button>Submit</button>
-    </form>
+    </form> -->
     <script src="./script_6_2.js" type="module"></script>
   </body>
 </html>
